--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
   <title>"Crazy" Cat Lady</title>
 </head>
+
 <body>
-<section class="container">
-<div class="row">
-  <div class="col">
-<div class="card">
-  <img src="//placehold.it/200x100" alt="">
-  <div class="card-body">
-    <h4>name:</h4>
-    <h4>happiness:</h4>
-    <button>Pet</button>
-  </div>
-</div>
+  <section class="container">
+    <div class="row">
+      
+      <div class="col-3">
+        <div class="card">
+          <img src="//placehold.it/200x100" alt="">
+          <div class="card-body">
+            <h4>name:</h4>
+            <h4>happiness:</h4>
+            <button>Pet</button>
+          </div>
+        </div>
+      </div>
+      
+    </div>
 
-  </div>
-  
-</div>
+  </section>
 
-</section>
-
-  <script src="app.js"></script>  
+  <script src="app.js"></script>
 </body>
+
 </html>
