--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <section class="container">
-    <div class="row">
+    <div class="row" id="cat">
       
-      <div class="col-3">
+      <!-- <div class="col-3">
         <div class="card">
           <img src="//placehold.it/200x100" alt="">
           <div class="card-body">
@@ -23,7 +23,7 @@
             <button>Pet</button>
           </div>
         </div>
-      </div>
+      </div> -->
       
     </div>
 
